---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE VIEW comedies AS SELECT * FROM films WHERE kind = 'Comedy';"
---
ViewStmt@0..66
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "comedies"
  Whitespace@20..21 " "
  As@21..23 "AS"
  Whitespace@23..24 " "
  SelectStmt@24..65
    Select@24..30 "SELECT"
    Whitespace@30..31 " "
    ResTarget@31..32
      ColumnRef@31..32
        AStar@31..32
          Ascii42@31..32 "*"
    Whitespace@32..33 " "
    From@33..37 "FROM"
    Whitespace@37..38 " "
    RangeVar@38..43
      Ident@38..43 "films"
    Whitespace@43..44 " "
    Where@44..49 "WHERE"
    Whitespace@49..50 " "
    AExpr@50..65
      ColumnRef@50..54
        Ident@50..54 "kind"
      Whitespace@54..55 " "
      Ascii61@55..56 "="
      Whitespace@56..57 " "
      AConst@57..65
        Sconst@57..65 "'Comedy'"
  Ascii59@65..66 ";"

